# android_kernel_google_zumapro

./: .gitmodules  BUILD.bazel  Kbuild  Makefile  auth-state.c  auth-state.h  auth13.h  auth22-ske.c  build.config.caimito  caimito_gki.fragment  dhd_debug.c  dhd_pcie_linux.c  exynos-hdcp-interface.h  exynos_drm_crtc.c  exynos_drm_decon.h  exynos_drm_dpp.c  fpc1020_platform_tee.c  goodix_brl_spi.c  goodix_ts_core.c  goog_touch_interface.c  lwis_buffer.c  lwis_trace.h  lwis_transaction.c  panel-gs-cm4.c  panel-gs-km4.c  s51xx_pcie.c  vendor_kernel_boot_modules.zumapro  wl_cfg80211.c  wl_cfg80211.h  wl_cfgscan.h  wl_cfgvif.c
alsa/: aoc_alsa_compr.c  aoc_alsa_hw.c  aoc_alsa_incall.c
arch/arm64/: Kconfig
arch/arm64/configs/: zumapro_defconfig
arch/arm64/kernel/: Makefile
cal_9865/: decon_reg.c
common/include/linux/: version_compat_defs.h
drivers/: Kconfig  Makefile
drivers/android/: binder.c  vendor_hooks.c
drivers/devfreq/: tensor_aio.c
drivers/input/: input.c
drivers/ufs/core/: ufshcd.c
dts/: BUILD.bazel  zumapro-pcie.dtsi  zumapro-usi.dtsi
dts/google/: zuma-caimito-battery.dtsi  zuma-caimito-wcharger.dtsi
fs/: exec.c  open.c  read_write.c  select.c  stat.c
fs/devpts/: inode.c
fs/f2fs/: super.c
fs/proc/: base.c
google-devices/: Makefile
google-devices/caimito/: Kconfig.ext  build_caimito.sh
google-devices/zuma/: build.config.zuma  vendor_kernel_boot_modules.zuma
google-devices/zuma/dts/: max777x9-tcpc.dtsi  zuma-max777xx.dtsi
google-devices/zumapro/: BUILD.bazel  build.config.zumapro
google-devices/zumapro/dts/: zumapro-a1-ipop.dts  zumapro-board-cp-s5300-sit.dtsi  zumapro-bts.dtsi  zumapro-drm-dpu.dtsi  zumapro.dtsi
google-modules/: Makefile
google-modules/amplifiers/cs35l41/: cs35l41.c
google-modules/amplifiers/cs40l26/: cs40l26-debugfs.c  cs40l26.c  cs40l26.h
google-modules/aoc/: aoc-interface-zuma.h  aoc.c  aoc.h
google-modules/aoc/alsa/: aoc_alsa.h  aoc_alsa_ctl.c  aoc_alsa_hw.c
google-modules/bluetooth/broadcom/: nitrous.c
google-modules/bms/: google_battery.c  google_charger.c  google_cpm.c  google_ttf.c  max77779_charger.c  max77779_charger.h  max77779_fg.c  p9221_charger.c  p9221_charger.h
google-modules/display/common/gs_panel/: gs_panel.c  (+4 more)
google-modules/display/samsung/: Kconfig  exynos_drm_bts.c  exynos_drm_debug.c  exynos_drm_decon.c  exynos_drm_decon.h  exynos_drm_dp.c  exynos_drm_dpp.c  exynos_drm_drv.c  exynos_drm_drv.h  exynos_drm_dsim.c  exynos_drm_dsim.h  exynos_drm_writeback.c
google-modules/fingerprint/fpc/: BUILD.bazel
google-modules/gpu/mali_kbase/: Kbuild  Makefile  mali_kbase_defs.h
google-modules/gxp/zuma/: Makefile
google-modules/hdcp/samsung/: BUILD.bazel  Kbuild  auth-control.c  auth13.c  auth22-ake.c  auth22-internal.h  auth22-lc.c  auth22-repeater.c  auth22-stream.c  auth22.c  auth22.h  selftest.c
google-modules/lwis/: BUILD.bazel  lwis_buffer.c  lwis_commands.h  lwis_debug.c  lwis_device.c  lwis_device.h  lwis_event.c  lwis_i2c.c  lwis_ioctl.c  lwis_periodic_io.c  lwis_trace.h
google-modules/touch/common/: BUILD.bazel  Kconfig  Makefile  goog_touch_interface.c
google-modules/touch/goodix/: Makefile
google-modules/wlan/bcm4390/: Kbuild  dhd_linux.c  dhd_linux_platdev.c  dhd_pcie.c  dhd_pcie.h  dhd_pcie_linux.c  wl_android.c  wl_cfg80211.c  wl_cfg80211.h  wl_cfgp2p.c  wl_cfgscan.c  wl_cfgvendor.c  wl_cfgvif.h
gs_drm/: BUILD.bazel  gs_drm_connector.c
gs_panel/: drm_bridge_funcs.c  gs_panel.c  gs_panel_connector_funcs.c
include/: wlioctl.h
include/gs_drm/: gs_drm_connector.h
include/gs_panel/: gs_panel.h
include/linux/: compiler-gcc.h  compiler_attributes.h  init.h  iova.h  mm.h  module.h  sched.h
include/trace/: dpu_trace.h  panel_trace.h
include/uapi/input/: touch_offload.h
init/: Kconfig  init_task.c
kernel/: sys.c
kernel/bpf/: core.c  syscall.c
kernel/irq/: sbalance.c
kernel/module/: Kconfig  main.c
kernel/power/: main.c
kernel/printk/: printk.c
kernel/rcu/: tree.c
kernel/sched/: core.c  cpufreq_schedutil.c  fair.c  idle.c  rt.c  sched.h  topology.c
kernel/time/: hrtimer.c
mali_kbase/: Kbuild  mali_kbase_core_linux.c  mali_kbase_js.c
mali_kbase/csf/: mali_kbase_csf_defs.h  mali_kbase_csf_scheduler.c
mm/: compaction.c  oom_kill.c  page_alloc.c  shmem.c  vmscan.c
net/unix/: af_unix.c
panel/: panel-samsung-s6e3hc4.c
scripts/: link-vmlinux.sh
security/selinux/: hooks.c
(+48 files in other folders)
