# SPDX-License-Identifier: GPL-2.0

load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

kernel_module(
    name = "fpc",
    srcs = glob([
        "**/*.c",
        "**/*.h",
    ]) + [
        "//private/google-modules/soc/gs:gs_soc_headers",
    ],
    outs = [
        "fpc1020_platform_tee.ko",
    ],
    kernel_build = "//private/google-modules/soc/gs:gs_kernel_build",
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
    deps = [
        "//private/google-modules/soc/gs:gs_soc_module",
    ],
)
